@@ -31,6 +31,7 @@ TinkerPop 3.2.4 (Release Date: NOT OFFICIALLY RELEASED YET)
 * Fixed a bug in `LazyBarrierStrategy` where `profile()` was deactivating it accidentally.
 * Fixed a bug in `RepeatUnrollStrategy` where stateful `DedupGlobalStep` was cloned and thus, maintained two deduplication sets.
 * Added documentation around "terminal steps" in Gremlin: `hasNext()`, `next()`, `toList()`, etc.
+* Added specific GraphSON serializers for `RequestMessage` and `ResponseMessage` in GraphSON 2.0.
 * Added `CloseableIterator` to allow `Graph` providers who open expensive resources a way to let users release them.
 * Fixed minor bug in `gremlin-driver` where closing a session-based `Client` without initializing it could generate an error.
 * Relieved synchronization pressure in various areas of `TinkerGraphComputer`.
